# gRPC_sample_HttpLikeRPC

./: .cproject  .gitignore  .project  Makefile.am  README.md  autogen.sh  configure.ac
gtest/: Makefile.am
gtest/gtest/: gtest.h
src/: Makefile.am  greeting_client.cpp  greeting_server.cpp  http_like_rpc.grpc.pb.cc  http_like_rpc.grpc.pb.h  http_like_rpc.pb.cc  http_like_rpc.pb.h  http_like_rpc.proto  tools_rpc.h
